--- a/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
+++ b/src/app/layouts/Front/user-layout/navbarf/navbarf.component.html
@@ -18,6 +18,9 @@
         <a class="nav-link" routerLink="/info" routerLinkActive="active">Info</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#footer">Contact</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link btn btn-primary text-white" routerLink="/authentication/login">Login</a>
       </li>
     </ul>
