--- a/src/app/layouts/Front/user-layout/navbarf/navbarf.component.scss
+++ b/src/app/layouts/Front/user-layout/navbarf/navbarf.component.scss
@@ -65,3 +65,6 @@
     background-image: url('data:image/svg+xml;base64,...'); /* Ensure toggle icon is visible */
   }
 }
+html {
+  scroll-behavior: smooth;
+}
