--- a/src/app/layouts/Front/user-layout/slides-front/slides-front.component.html
+++ b/src/app/layouts/Front/user-layout/slides-front/slides-front.component.html
@@ -1,3 +1,7 @@
+<!-- slides-front.component.html -->
+
+
+
 <!-- Carousel -->
 <div id="carouselExampleControls" class="carousel slide">
   <div class="carousel-inner">
@@ -20,7 +24,15 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-<!-- Other components -->
+<ng-template #dialogTemplate>
+  <h1 mat-dialog-title>{{ isSuccess ? 'Success' : 'Error' }}</h1>
+  <div mat-dialog-content>
+    <p>{{ dialogMessage }}</p>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button mat-dialog-close>Close</button>
+  </div>
+</ng-template>
+<!-- Other Components -->
 <app-eventsfront></app-eventsfront>
 <app-conventionsfront></app-conventionsfront>
