--- a/src/app/layouts/Front/user-layout/user-layout.component.html
+++ b/src/app/layouts/Front/user-layout/user-layout.component.html
@@ -1,4 +1,3 @@
 <app-navbarf></app-navbarf>
-<div class="container mt-3"> 
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
