--- a/src/app/pages/ui-components/list-events/list-events.component.html
+++ b/src/app/pages/ui-components/list-events/list-events.component.html
@@ -1,6 +1,7 @@
-<H1>Events</H1>
+<h1>Events</h1>
+<br>
 <div class="container-fluid" style="width: 100%">
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-auto">
       <!-- Button to navigate to /AddEvents -->
       <a mat-flat-button href="/AddEvents" class="text-white" style="background-color: rgb(83, 172, 83);">
@@ -14,103 +15,122 @@
         Deleted Events
       </a>
     </div>
-    
-    <!-- Angular Material Table -->
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      
-      <!-- Title Column -->
-      <ng-container matColumnDef="titre">
-        <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element"> {{element.titre}} </td>
-      </ng-container>
-
-      <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
-
-      <!-- Image Column -->
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef> Image </th>
-        <td mat-cell *matCellDef="let element">
-          <img [src]="element.image" alt="Image" style="width: 100px; height: auto;">
-        </td>
-      </ng-container>
-
-      <!-- Status Column -->
-      <ng-container matColumnDef="statusEvent">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.status ? 'Active' : 'Inactive'}} </td>
-      </ng-container>
-
-      <!-- Type Column -->
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
-        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-      </ng-container>
-
-      <!-- Button Link Column -->
-      <ng-container matColumnDef="btn_href">
-        <th mat-header-cell *matHeaderCellDef> Button Link </th>
-        <td mat-cell *matCellDef="let element">
-          <a [href]="element.btn_href" target="_blank">{{element.btn_href}}</a>
-        </td>
-      </ng-container>
-
-      <!-- Button Name Column -->
-      <ng-container matColumnDef="btn_name">
-        <th mat-header-cell *matHeaderCellDef> Button Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.btn_name}} </td>
-      </ng-container>
-
-      <!-- Created Column -->
-      <ng-container matColumnDef="created">
-        <th mat-header-cell *matHeaderCellDef> Created </th>
-        <td mat-cell *matCellDef="let element"> {{element.created | date:'short'}} </td>
-      </ng-container>
-
-      <!-- Updated Column -->
-      <ng-container matColumnDef="updated">
-        <th mat-header-cell *matHeaderCellDef> Updated </th>
-        <td mat-cell *matCellDef="let element"> {{element.updated | date:'short'}} </td>
-      </ng-container>
-
-      <!-- Deleted Column -->
-      <ng-container matColumnDef="deleted">
-        <th mat-header-cell *matHeaderCellDef> Deleted </th>
-        <td mat-cell *matCellDef="let element"> {{element.deleted ? (element.deleted | date:'short') : 'N/A'}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="reservations">
-        <th mat-header-cell *matHeaderCellDef> Reservations </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="navigateToReservations(element._id)" aria-label="Reservations count">
-            <mat-icon>badge</mat-icon>
-            <span matBadge="{{ element.reservations }}" matBadgeColor="primary" matBadgeOverlap="false"></span>
-          </button>
-        </td>
-      </ng-container>
-      
-      
-      
-
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-button class="update-button" (click)="updateEvent(element._id)">
-            <mat-icon>edit</mat-icon> Update
-          </button>
-          <button mat-button class="delete-button" (click)="deleteEvent(element._id)">
-            <mat-icon>delete</mat-icon> Delete
-          </button>
-        </td>
-      </ng-container>
-
-      <!-- Header and Row Definitions -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
   </div>
+
+  <!-- Angular Material Table -->
+  <table mat-table [dataSource]="paginatedEvents" class="mat-elevation-z8">
+
+    <!-- Title Column -->
+    <ng-container matColumnDef="titre">
+      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <td mat-cell *matCellDef="let element"> {{element.titre}} </td>
+    </ng-container>
+
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+
+    <!-- Image Column -->
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef> Image </th>
+      <td mat-cell *matCellDef="let element">
+        <img [src]="element.image" alt="Image" style="width: 100px; height: auto;">
+      </td>
+    </ng-container>
+
+    <!-- Status Column -->
+    <ng-container matColumnDef="statusEvent">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status ? 'Active' : 'Inactive'}} </td>
+    </ng-container>
+
+    <!-- Type Column -->
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+    </ng-container>
+
+    <!-- Button Link Column -->
+    <ng-container matColumnDef="btn_href">
+      <th mat-header-cell *matHeaderCellDef> Button Link </th>
+      <td mat-cell *matCellDef="let element">
+        <a [href]="element.btn_href" target="_blank">{{element.btn_href}}</a>
+      </td>
+    </ng-container>
+
+    <!-- Button Name Column -->
+    <ng-container matColumnDef="btn_name">
+      <th mat-header-cell *matHeaderCellDef> Button Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.btn_name}} </td>
+    </ng-container>
+
+    <!-- Created Column -->
+    <ng-container matColumnDef="created">
+      <th mat-header-cell *matHeaderCellDef> Created </th>
+      <td mat-cell *matCellDef="let element"> {{element.created | date: 'dd MMM yyyy, HH:mm'}} </td>
+    </ng-container>
+
+    <!-- Updated Column -->
+    <ng-container matColumnDef="updated">
+      <th mat-header-cell *matHeaderCellDef> Updated </th>
+      <td mat-cell *matCellDef="let element"> {{element.updated | date: 'dd MMM yyyy, HH:mm'}} </td>
+    </ng-container>
+   
+    <!-- Deleted Column -->
+    <ng-container matColumnDef="deleted">
+      <th mat-header-cell *matHeaderCellDef> Deleted </th>
+      <td mat-cell *matCellDef="let element"> {{element.deleted ? (element.deleted | date: 'dd MMM yyyy, HH:mm') : 'N/A'}} </td>
+    </ng-container>
+
+    <!-- Reservations Column -->
+    <ng-container matColumnDef="reservations">
+      <th mat-header-cell *matHeaderCellDef> Reservations </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="navigateToReservations(element._id)" aria-label="Reservations count">
+          <mat-icon>badge</mat-icon>
+          <span matBadge="{{ element.reservations }}" matBadgeColor="primary" matBadgeOverlap="false"></span>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button class="update-button" (click)="updateEvent(element._id)">
+          <mat-icon>edit</mat-icon> Update
+        </button>
+        <button mat-button class="delete-button" (click)="deleteEvent(element._id)">
+          <mat-icon>delete</mat-icon> Delete
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Header and Row Definitions -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <!-- Pagination Controls -->
+  <div class="pagination-controls d-flex justify-content-center align-items-center mt-4">
+    <button mat-raised-button color="primary" (click)="onPageChange(currentPage - 1)" 
+            [disabled]="currentPage === 0" class="pagination-button">
+      <mat-icon>chevron_left</mat-icon>
+      Previous
+    </button>
+    
+    <span class="pagination-info mx-3">
+      Page <strong>{{ currentPage + 1 }}</strong> of <strong>{{ totalPages }}</strong>
+    </span>
+    
+    <button mat-raised-button color="primary" (click)="onPageChange(currentPage + 1)" 
+            [disabled]="currentPage === totalPages - 1" class="pagination-button">
+      Next
+      <mat-icon>chevron_right</mat-icon>
+    </button>
+  </div>
+  
+  
 </div>
