--- a/src/app/pages/ui-components/list-events/list-events.component.scss
+++ b/src/app/pages/ui-components/list-events/list-events.component.scss
@@ -108,4 +108,23 @@
       padding: 4px 8px;
     }
   }
+  .pagination-controls {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+  }
+  
+  button {
+    margin: 0 5px;
+  }
+  .red-button {
+    color: red;
+  }
+  h1 {
+    font-size: 2.5rem; /* Adjust size as needed */
+    text-align: center; /* Center align the text */
+    margin: 20px 0; /* Add some margin */
+    font-family: 'Arial', sans-serif; /* Choose a font family */
+    font-weight: bold; /* Make the font bold */
+  }
   
