--- a/src/app/pages/ui-components/list-slides/list-slides.component.html
+++ b/src/app/pages/ui-components/list-slides/list-slides.component.html
@@ -1,4 +1,5 @@
 <H1>Slides</H1>
+<br>
 <div class="container-fluid" style="width: 100%">
   <div class="row">
     <div class="col-auto">
@@ -52,25 +53,35 @@
       <!-- Btn_name Column -->
       <ng-container matColumnDef="btn_name">
         <th mat-header-cell *matHeaderCellDef> Button Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.btn_name}} </td>
+        <td mat-cell *matCellDef="let element">
+          <a 
+            *ngIf="element.btn_href"
+            [href]="element.btn_href"
+            target="_blank"
+            class="btn-link"
+          >
+            {{ element.btn_name }}
+          </a>
+        </td>
       </ng-container>
+      
 
       <!-- Created Column -->
       <ng-container matColumnDef="created">
         <th mat-header-cell *matHeaderCellDef> Created </th>
-        <td mat-cell *matCellDef="let element"> {{element.created | date:'short'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.created | date: 'dd MMM yyyy, HH:mm'}} </td>
       </ng-container>
 
       <!-- Updated Column -->
       <ng-container matColumnDef="updated">
         <th mat-header-cell *matHeaderCellDef> Updated </th>
-        <td mat-cell *matCellDef="let element"> {{element.updated | date:'short'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.updated | date: 'dd MMM yyyy, HH:mm'}} </td>
       </ng-container>
 
       <!-- Deleted Column -->
       <ng-container matColumnDef="deleted">
         <th mat-header-cell *matHeaderCellDef> Deleted </th>
-        <td mat-cell *matCellDef="let element"> {{element.deleted ? (element.deleted | date:'short') : 'N/A'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.deleted ? (element.deleted |date: 'dd MMM yyyy, HH:mm') : 'N/A'}} </td>
       </ng-container>
 
       <!-- Actions Column -->
