--- a/src/app/pages/ui-components/list-slides/list-slides.component.scss
+++ b/src/app/pages/ui-components/list-slides/list-slides.component.scss
@@ -108,4 +108,33 @@
       padding: 4px 8px;
     }
   }
+  .btn-link {
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+    background-color: #007bff;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-link:hover {
+    background-color: #0056b3;
+  }
+  h1 {
+    font-size: 2.5rem; /* Adjust size as needed */
+    text-align: center; /* Center align the text */
+    margin: 20px 0; /* Add some margin */
+    font-family: 'Arial', sans-serif; /* Choose a font family */
+    font-weight: bold; /* Make the font bold */
+  }
+  
+  .btn-link:active {
+    background-color: #004080;
+  }
   
